@@ -1,32 +1,37 @@
 package com.hr_management.hr_management.controller;
 
 import com.hr_management.hr_management.mapper.EmployeeMapper;
-import com.hr_management.hr_management.model.dto.EmployeeDTO;
+import com.hr_management.hr_management.model.dto.CountryDTO;
+import com.hr_management.hr_management.model.dto.LocationDTO;
+import com.hr_management.hr_management.model.entity.Countries;
+import com.hr_management.hr_management.model.entity.Employee;
 import com.hr_management.hr_management.repository.EmployeeRepository;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
 public class EmployeeController {
 
-    private final EmployeeRepository employeeRepository;
-    private final EmployeeMapper employeeMapper;
+    EmployeeRepository employeeRepository;
+    EmployeeMapper employeeMapper;
 
-    // Constructor injection
     public EmployeeController(EmployeeRepository employeeRepository, EmployeeMapper employeeMapper) {
         this.employeeRepository = employeeRepository;
         this.employeeMapper = employeeMapper;
     }
 
-    // Return all employees
-    @GetMapping("/employees")
-    public List<EmployeeDTO> getAllEmployees() {
-        return employeeRepository.findAll().stream()
+    @GetMapping("employees")
+    public List<Employee> getAllEmployees() {
+        /*return employeeRepository.findAll().stream()
                 .map(employeeMapper::toDTO)
-                .collect(Collectors.toList());
+                .collect(Collectors.toList());*/
+        return employeeRepository.findAll().stream().toList();
     }
+
 }
